-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.9
-
None
-
e32b292cd (dev), 210a99f58 (6.10), b26912b63 (6.9), 0c14028c5 (tqtc/lts-6.8)
According to the documentation (https://doc.qt.io/qt-6/qml-qtquick-item.html#enabled-prop) enabled set to false should block any mouse/keyboard input:
This property holds whether the item receives mouse and keyboard events. By default this is true.
The actual behavior was like that in Qt 5, however it's different in Qt 6. E.g. the mouse hover events are notified even if the item is set to enabled = false.
It means that the code below behaves differently for Qt 5/6. In the meantime the documentation is the same for both versions regarding enabled property.
Button {
text: "button"
enabled: false
ToolTip.text: "some text"
ToolTip.visible: hovered
MouseArea {
anchors.fill: parent
hoverEnabled: true
onEntered: console.log("ENTERED!")
}
}
- relates to
-
QTBUG-107037 MultiPointTouchArea with enabled:false blocks events to MouseArea
-
- Closed
-
- resulted from
-
QTBUG-30801 Button: tooltip not shown when the button is disabled
-
- Closed
-