Doc: Clarify Qt 6 hover behavior for Item::enabled

In Qt 6, hover events may still be delivered when enabled is false
to support tooltips. Updated the documentation to reflect this.

Pick-to: 6.8
Fixes: QTBUG-136598
Task-number: QTBUG-30801
Change-Id: I77fa717c18a76660c4f63b175c02cb8eef21d175
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: Shawn Rutledge 🏖️ <shawn.rutledge@qt.io>
Reviewed-by: Alexei Cazacov <alexei.cazacov@qt.io>
(cherry picked from commit e32b292cd5f34c9f009623e57bb6054fcdd0af62)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 210a99f589a9e6a51bb84002cf0360254b2f69bf)